--- a/wifidog.conf
+++ b/wifidog.conf
@@ -22,7 +22,7 @@
 # Typically vlan1 for OpenWrt, and eth0 or ppp0 otherwise,
 # Normally autodetected
 
-# ExternalInterface eth0
+ExternalInterface eth0
 
 # Parameter: GatewayInterface
 # Default: NONE
@@ -33,7 +33,7 @@
 # and eth1, wlan0, ath0, etc. otherwise
 # You can get this interface with the ifconfig command and finding your wifi interface
 
-GatewayInterface br-lan
+GatewayInterface wlan0
 
 # Parameter: GatewayAddress
 # Default: Find it from GatewayInterface
@@ -78,11 +78,16 @@ GatewayInterface br-lan
 # plain HTTP.
 #
 
-#AuthServer {
-#    Hostname auth.ilesansfil.org
+AuthServer {
+    Hostname exam.yunyoukong.net
 #    SSLAvailable yes
-#    Path /
-#}
+    Path /portal/
+    LoginScriptPathFragment  index.php?act=portal&op=login&
+    PortalScriptPathFragment index.php?act=portal&op=portal&
+    MsgScriptPathFragment    index.php?act=portal&op=gw_message&
+    PingScriptPathFragment   index.php?act=portal&op=ping&
+    AuthScriptPathFragment   index.php?act=portal&op=auth&
+}
 
 #AuthServer {
 #    Hostname auth2.ilesansfil.org
