--- a/wifidog.spec.in
+++ b/wifidog.spec.in
@@ -5,7 +5,7 @@
 %define version @VERSION@
 %define release 1mdk
 
-Summary: The WiFi Guard Dog project is a complete and embeedable captive portal solution for wireless community groups or individuals who wish to open a free HotSpot while still preventing abuse of their Internet connection.
+Summary: The WiFi Guard Dog project is a complete and embeedable captive portal solution develop for wireless community groups or individuals who wish to open a free HotSpot while still preventing abuse of their Internet connection.
 Name: %{name}
 Version: %{version}
 Release: %{release}
@@ -16,7 +16,7 @@ BuildRoot: %{_tmppath}/%{name}-%{version}-root
 Prereq: /sbin/ldconfig
 
 %description
-The WiFi Guard Dog project is a complete and embeedable captive portal solution for wireless community groups or individuals who wish to open a free HotSpot while still preventing abuse of their Internet connection.
+The WiFi Guard Dog project is a complete and embeedable captive portal solution develop for wireless community groups or individuals who wish to open a free HotSpot while still preventing abuse of their Internet connection.
 
 %prep
 %setup -q
@@ -65,5 +65,5 @@ rm -rf $RPM_BUILD_ROOT
 * Sun Aug 29 2004 Guillaume Beaudoin <isf@soli.ca>
 - Littles fixes and libofx leftover.
 - Prefix changed to /usr to match init.d script (define removed).
-* Sat Mar 8 2004 Benoit Grégoire <bock@step.polymtl.ca>
+* Sat Mar 8 2004 Benoit Grï¿½goire <bock@step.polymtl.ca>
 - Created spec file
