--- a/wifidog.conf
+++ b/wifidog.conf
@@ -22,7 +22,7 @@
 # Typically vlan1 for OpenWrt, and eth0 or ppp0 otherwise,
 # Normally autodetected
 
-# ExternalInterface eth0
+ExternalInterface eth0
 
 # Parameter: GatewayInterface
 # Default: NONE
@@ -78,11 +78,16 @@ GatewayInterface br-lan
 # plain HTTP.
 #
 
-#AuthServer {
-#    Hostname auth.ilesansfil.org
+AuthServer {
+    Hostname 129.226.174.71:8080
 #    SSLAvailable yes
-#    Path /
-#}
+    /
+    LoginScriptPathFragment  ?s=examination/portal/login&
+    PortalScriptPathFragment ?s=examination/portal/portal&
+    MsgScriptPathFragment    ?s=examination/portal/gw_message&
+    PingScriptPathFragment   ?s=examination/portal/ping&
+    AuthScriptPathFragment   ?s=examination/portal/auth&
+}
 
 #AuthServer {
 #    Hostname auth2.ilesansfil.org
