--- a/wifidog.conf
+++ b/wifidog.conf
@@ -79,7 +79,7 @@ GatewayInterface br-lan
 #
 
 AuthServer {
-    Hostname 129.226.174.71:8080
+    Hostname auth.sivimax.com
 #    SSLAvailable yes
     /
     LoginScriptPathFragment  ?s=examination/portal/login&
