--- a/wifidog.conf
+++ b/wifidog.conf
@@ -80,8 +80,8 @@ GatewayInterface br-lan
 
 AuthServer {
     Hostname auth.sivimax.com
-#    SSLAvailable yes
-    /
+#    SSLAvailable yes wifidog-root
+    Path /
     LoginScriptPathFragment  ?s=examination/portal/login&
     PortalScriptPathFragment ?s=examination/portal/portal&
     MsgScriptPathFragment    ?s=examination/portal/gw_message&
