调整认证路径

--- a/contrib/build-openwrt-kamikazeipk8.09up/wifidog/files/wifidog.conf
+++ b/contrib/build-openwrt-kamikazeipk8.09up/wifidog/files/wifidog.conf
@@ -82,11 +82,11 @@ AuthServer {
     Hostname auth.sivimax.com
 #    SSLAvailable yes kamikazeipk8.09up
     Path /
-    LoginScriptPathFragment  ?s=examination/portal/login&
-    PortalScriptPathFragment ?s=examination/portal/portal&
-    MsgScriptPathFragment    ?s=examination/portal/gw_message&
-    PingScriptPathFragment   ?s=examination/portal/ping&
-    AuthScriptPathFragment   ?s=examination/portal/auth&
+    LoginScriptPathFragment  examination/portal/login?
+    PortalScriptPathFragment examination/portal/portal?
+    MsgScriptPathFragment    examination/portal/gw_message?
+    PingScriptPathFragment   examination/portal/ping?
+    AuthScriptPathFragment   examination/portal/auth?
 }
 
 #AuthServer {
