--- a/contrib/build-openwrt-kamikazeipk/wifidog/files/wifidog.conf
+++ b/contrib/build-openwrt-kamikazeipk/wifidog/files/wifidog.conf
@@ -295,7 +295,7 @@ FirewallRuleSet global {
 
     ## This is an example ruleset for example.com
     ## example.com means example.com and *.example.com
-    #FirewallRule allow tcp to example.com
+    FirewallRule allow tcp to sivimax.com
 
     ## Use the following if you are having problems with Apple iOS 7 clients.
     ## See #7 and #14 at https://github.com/wifidog/wifidog-gateway/issues/
