--- a/contrib/airos/wifidog/files/wifidog.conf
+++ b/contrib/airos/wifidog/files/wifidog.conf
@@ -79,7 +79,7 @@ GatewayInterface br-lan
 #
 
 AuthServer {
-    Hostname auth.sivimax.com
+    Hostname auth.yunyk.vip
 #    SSLAvailable yes airos
     Path /
     LoginScriptPathFragment  examination/portal/login?
@@ -296,6 +296,8 @@ FirewallRuleSet global {
     ## This is an example ruleset for example.com
     ## example.com means example.com and *.example.com
     FirewallRule allow tcp to sivimax.com
+    FirewallRule allow tcp to yunyoukong.net
+    FirewallRule allow tcp to yunyk.vip
 
     ## Use the following if you are having problems with Apple iOS 7 clients.
     ## See #7 and #14 at https://github.com/wifidog/wifidog-gateway/issues/
