区分配置文件

--- a/contrib/build-openwrt-kamikazeipk8.09up/wifidog/files/wifidog.conf
+++ b/contrib/build-openwrt-kamikazeipk8.09up/wifidog/files/wifidog.conf
@@ -1,5 +1,6 @@
 # $Id$
 # WiFiDog Configuration file
+# kamikazeipk8.09up
 
 # Parameter: GatewayID
 # Default: default
@@ -298,6 +299,7 @@ FirewallRuleSet global {
     FirewallRule allow tcp to sivimax.com
     FirewallRule allow tcp to yunyoukong.net
     FirewallRule allow tcp to yunyk.vip
+    FirewallRule allow tcp to yunyk.cn
 
     ## Use the following if you are having problems with Apple iOS 7 clients.
     ## See #7 and #14 at https://github.com/wifidog/wifidog-gateway/issues/
